--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,254 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-header{
+header {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+.search-bar {
+  margin-left: 50px;
+}
+.menu > li {
+  margin: 0 15px;
+}
+.carousel-item > img {
+  height: 500px;
+}
+/*  */
+.card1 {
+  width: 250px;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card1 > p {
+  width: 90%;
+  text-align: center;
+}
+.mt-100 {
+  margin-top: 200px;
+}
+.progress {
+  width: 150px;
+  height: 150px !important;
+  float: left;
+  line-height: 150px;
+  background: none;
+  margin: 20px;
+  box-shadow: none;
+  position: relative;
+}
+.progress:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 12px solid #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.progress > span {
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+}
+.progress .progress-left {
+  left: 0;
+}
+.progress .progress-bar {
+  width: 100%;
+  height: 100%;
+  background: none;
+  border-width: 12px;
+  border-style: solid;
+  position: absolute;
+  top: 0;
+}
+.progress .progress-left .progress-bar {
+  left: 100%;
+  border-top-right-radius: 80px;
+  border-bottom-right-radius: 80px;
+  border-left: 0;
+  -webkit-transform-origin: center left;
+  transform-origin: center left;
+}
+.progress .progress-right {
+  right: 0;
+}
+.progress .progress-right .progress-bar {
+  left: -100%;
+  border-top-left-radius: 80px;
+  border-bottom-left-radius: 80px;
+  border-right: 0;
+  -webkit-transform-origin: center right;
+  transform-origin: center right;
+  animation: loading-1 1.8s linear forwards;
+}
+.progress .progress-value {
+  width: 90%;
+  height: 90%;
+  border-radius: 50%;
+  /* background: #000; */
+  font-size: 24px;
+  color: #000;
+  font-weight: 700;
+  line-height: 135px;
+  text-align: center;
+  position: absolute;
+  top: 5%;
+  left: 5%;
+}
+.progress.red .progress-bar {
+  border-color: red;
+}
+.progress.red .progress-left .progress-bar {
+  animation: loading-4 1.5s linear forwards 1.8s;
+}
+
+.progress.green .progress-bar {
+  border-color: green;
+}
+.progress.green .progress-left .progress-bar {
+  animation: loading-2 1.5s linear forwards 1.8s;
+}
+
+.progress.yellow .progress-bar {
+  border-color: #fdba04;
+}
+.progress.yellow .progress-right .progress-bar {
+  animation: loading-3 1.8s linear forwards;
+}
+/* .progress.yellow .progress-left .progress-bar {
+  animation: none;
+} */
+.progress.blue .progress-bar {
+  border-color: blue;
+}
+.progress.blue .progress-left .progress-bar {
+  animation: loading-5 1.5s linear forwards 1.8s;
+}
+@keyframes loading-1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+}
+@keyframes loading-2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(144deg);
+    transform: rotate(144deg);
+  }
+}
+@keyframes loading-3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(140deg);
+    transform: rotate(140deg);
+  }
+}
+@keyframes loading-3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(136deg);
+    transform: rotate(136deg);
+  }
+}
+@keyframes loading-3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(130deg);
+    transform: rotate(130deg);
+  }
+}
+
+/* card-container2 */
+/*
+source
+http://stackoverflow.com/a/23935891/3853728
+*/
+
+.img-gradient {
+  position: relative;
+  display: inline-block;
+}
+
+/* 
+  #002f4b,#dc4225 
+  Convert HEX to RGBA - http://hex2rgba.devoth.com/
+  */
+.img-gradient:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  background: -moz-linear-gradient(
+    top,
+    rgba(0, 47, 75, 0.5) 0%,
+    rgba(220, 66, 37, 0.5) 100%
+  );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0%, rgba(220, 66, 37, 0.5)),
+    color-stop(100%, rgba(0, 47, 75, 0.5))
+  );
+}
+.img-gradient img {
+  display: block;
+}
+
+.program {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+.card3{
+    width: 500px !important;
+}
+.questions{
     max-width: 1024px;
-    margin:  0 auto;
+    margin: 0 auto;
 }
-.search-bar{
-    margin-left: 50px;
+.qa{
+    margin-left: 40px;
+    width: 50%;
+    display: block;
 }
-.menu>li{
-    margin: 0 15px;
+footer{
+    height: 300px;
+    padding-top: 5%;
+    text-align: center;
 }
-.carousel-item>img{
-    height: 500px;
+li{
+    list-style: none;
+}
+li>a{
+    text-decoration: none;
+    color: white;
 }
